Added the carousel effect to the file. This should not be included in my scoring

--- a/LESS/mixins.less
+++ b/LESS/mixins.less
@@ -12,3 +12,10 @@
   align-items: @ai;
   flex-direction: @dir;
 }
+
+.preventSelection {
+  //This will prevent a user from selecting the carousel in the browser
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
