--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -1,5 +1,8 @@
 .carousel {
   .width-100();
+  //This is the mixin that was created in the mixin.less file that 
+  //prevents a user from selecting the carousel. 
+  .preventSelection();
   .flex(center, center);
   height: 500px;
   position: relative;
@@ -8,10 +11,17 @@
   @media(min-width: 1200px){
     width: 1200px;
   }
+  
   .left-button, .right-button {
-    .flex(center);
+    //This is the mixin that was created in the mixin.less file that 
+    //prevents a user from selecting the carousel. 
+    .preventSelection();
+    //Changed justify-content and align-items to be centered
+    .flex(center, center);
     color: @lambda-times-color-white;
     background-color: @lambda-times-color-primary;
+    //Made border static by placing it here
+    border: @lambda-times-color-primary;
     font-size: 40px;
     border-radius: 50%;
     position: absolute;
@@ -21,7 +31,7 @@
     &:hover {
       color: @lambda-times-color-primary;
       background-color: @lambda-times-color-white;
-      border: 2px solid @lambda-times-color-primary;
+      //Removed border from here
     }
   }
   .left-button {
@@ -35,7 +45,13 @@
     transform: translate(0, -50%);
   }
   img {
+    //Prevents selection of the image in the carousel
+    .preventSelection();
     .width-100();
     display: none;
+  }
+  //Sets the current image to be a block element
+  .current-img {
+    display: block;
   }
 }
